Fix PyPI publishing to use API token instead of trusted publishing

--- a/.github/workflows/publish-manual.yml
+++ b/.github/workflows/publish-manual.yml
@@ -12,10 +12,6 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
-    environment: pypi
-    permissions:
-      id-token: write
-
     steps:
     - uses: actions/checkout@v4
 
@@ -43,3 +39,5 @@ jobs:
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
