--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,10 +68,6 @@ jobs:
     needs: build
     if: github.event_name == 'release'
 
-    environment: pypi
-    permissions:
-      id-token: write
-
     steps:
     - uses: actions/download-artifact@v4
       with:
@@ -80,3 +76,5 @@ jobs:
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
