--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "langchain-catchall"
-version = "0.1.0"
+version = "0.1.1"
 description = "LangChain integration for NewsCatcher CatchAll API"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -12,7 +12,7 @@ license = {text = "MIT"}
 authors = [
   {name = "NewsCatcher", email = "support@newscatcherapi.com"}
 ]
-keywords = ["langchain", "newscatcher", "news", "search", "agent"]
+keywords = ["langchain", "newscatcher", "web search", "agent"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
