--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,6 +68,10 @@ jobs:
     needs: build
     if: github.event_name == 'release'
 
+    environment: pypi
+    permissions:
+      id-token: write
+
     steps:
     - uses: actions/download-artifact@v4
       with:
